fix: our history white invisible text due white bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -836,6 +836,7 @@ img {
 .our-history .texto {
   text-align: left;
   font-size: 21px;
+  color: #424242;
 }
 
 .our-history .title {
